testsuite/tests/th/T13968.stderr

T13968.hs:6:2: error: [GHC-58805]
    Illegal binding of an existing name: succ
